<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Manage Bookings</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="btnPhongTrong">Phòng Trống</string>
    <string name="btnDatTruoc">Phòng Đã Đặt Trước (Check In)</string>
    <string name="btnDangThue">Phòng Đang Thuê</string>
    <string name="tvSoPhong">Phòng 101</string>
    <string name="tvTrangThaiCheckIn">Đang Check In</string>
    <string name="choXacNhan">Not Confirmed Yet ...</string>
    <string name="confirmed">Confirmed</string>
    <string name="occupied">Occupied ...</string>
    <string name="checkOut">Check-out ...</string>
    <string name="completed">Completed</string>
    <string name="btnChoXacNhan">Chờ Xác Nhận</string>
    <string name="tvTrangThaiEmpty">Đang Trống</string>
    <string name="tvTrangThaiFull">Đang Thuê</string>
    <string name="tvSonguoi">2 Người</string>
    <string name="tvGiuong">1 giường King</string>
    <string name="tvSoLuongNguoi">2 người/phòng</string>
    <string name="tvDate">1 đêm</string>
    <string name="tvNote">Không có ghi chú</string>
    <string name="tvPayment">Payment</string>
    <string name="tvRoomMoney">Room Charge</string>
    <string name="tvAdvanceDeposit">Advance Deposit</string>
    <string name="tvTax">VAT (5%)</string>
    <string name="tvRoomType2">3 ngày 2 đêm</string>
    <string name="btnCheckIn">Check In</string>
    <string name="btnCheckOut">Check Out</string>
    <string name="btnChoCheckIn">Đã Xác Nhận (Chờ Check In)</string>
    <string name="btnDonChoXacNhan">Đơn CHờ Xác Nhận</string>
    <string name="btnDonChoCheckIn">Đơn CHờ Check In</string>
    <string name="btnDonDatTruoc">Đơn Đã Đặt Trước (Check In)</string>
    <string name="btnDonCheckOut">ĐƠn Đã Check Out</string>
    <string name="standard_single_room">Standard Single Room x100</string>
    <string name="price">20.000.000 VND</string>
    <string name="btnXemChiTiet">Xem Chi Tiết</string>
    <string name="title_activity_drawer_menu">drawer_menu</string>
    <!--    <string name="navigation_drawer_open">Open navigation drawer</string>-->
    <!--    <string name="navigation_drawer_close">Close navigation drawer</string>-->
    <!--    <string name="nav_header_title">Android Studio</string>-->
    <!--    <string name="nav_header_subtitle">android.studio@android.com</string>-->
    <!--    <string name="nav_header_desc">Navigation header</string>-->
    <!--    <string name="action_settings">Settings</string>-->
    <string name="tvThongtin">Guest</string>
    <string name="titleListRoomDetail">Rooming List</string>
    <string name="btnHuy">HỦY</string>
    <string name="btnXacNhan">Xác Nhận</string>
    <string name="tvChangePass">Change Password</string>
    <string name="tvForgetPass">Forget Password</string>
    <string name="tvLogin">Login</string>
    <string name="tv1231">Sign in to continue</string>
    <string name="tvForget123">Nhập mật khẩu mới bên dưới</string>
    <string name="tvBack">Back</string>
    <string name="btnSave">Save</string>
    <string name="message">Message</string>
    <string name="tvDem">500000VND/đêm</string>
    <string name="btnDaXacNhan">Confirm</string>
    <string name="btnHuyPhong">Cancel</string>
    <string name="btnChooseRoom">Chọn Phòng</string>
    <string name="tvChitietPhong">Một thực tế đã có từ lâu rằng người đọc sẽ bị phân tâm bởi nội dung có thể đọc được của một trang khi nhìn vào bố cục của nó. Điểm đáng chú ý của việc sử dụng Lorem of a Ipsum là nó có phân phối chuẩn thường xuyên hơn hoặc ít hơn của các chữ cái.</string>
    <string name="edtNewPassword">New Password</string>
    <string name="edtNewPasswordConfirm">Repeat Password</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="title_activity_list_order_completed">Orders Completed</string>
    <string name="orders_waiting">Unconfirmed Orders</string>
    <string name="orders_comleted">Completed Orders</string>
    <string name="list_rooms">Vacant Rooms</string>
    <string name="logout">Logout</string>
    <string name="exit">Exit</string>
    <string name="other">Other</string>
    <string name="service">Service Orders</string>
    <string name="order_Detail">Order Detail</string>
    <string name="order_create">Create Order</string>
    <string name="room_detail_lower">RoomDetail</string>
    <string name="confirm">Confirm</string>
    <string name="check_in">Check-in</string>
    <string name="check_out">Check-out</string>
    <string name="orders_check_in">Orders Check-in</string>
    <string name="orders_confirmed">Orders Confirmed</string>
    <string name="orders_occupied">Orders Occupied</string>
    <string name="service_room">Service Room</string>
    <string name="occupied_orders">Occupied Orders</string>
    <string name="confirmed_orders">Confirmed Orders</string>
    <string name="total_payment">Total Payment:</string>
    <string name="total_orders">Total Orders:</string>
    <string name="position">Position:</string>
    <string name="price_room">Price: </string>
    <string name="phone_number">Phone number</string>
    <string name="orders">Orders</string>
    <string name="question_exit">Are you sure you want to exit</string>
    <string name="customer_information">Customer Information</string>
    <string name="customer_fullname">Customer Fullname</string>
    <string name="customer_phone_number">Customer Phone Number</string>
    <string name="customer_email">Customer Email</string>
    <string name="booking_time">Booking Time</string>
    <string name="create">Create</string>
    <string name="cancel">cancel</string>
    <string name="date">Date</string>
    <string name="month">Month</string>
    <string name="year">Year</string>
    <string name="create_new_order">Create New Order</string>
    <string name="error_fullname">*Full name must be more than 6 characters</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="otp">OTP:</string>
    <string name="send_otp">Send Otp</string>
    <string name="floor">Floor</string>
    <string name="type">Type</string>
    <string name="price_text">Price</string>
    <string name="empty_rooms">Empty Rooms</string>
    <string name="occupied_rooms">Occupied Rooms</string>
    <string name="reserved_rooms">Reserved Rooms</string>
    <string name="all_rooms">All Rooms</string>
    <string name="add_room">Add Room</string>
    <string name="update_room">Update Room</string>
    <string name="manage_booking">Manage Booking</string>
    <string name="done">Done</string>
</resources>