<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
<item android:title="@string/service">
    <menu android:checkableBehavior="single">
        <item
            android:id="@+id/orders_waiting"
            android:title="@string/orders_waiting"
            android:icon="@drawable/ic_menu_slideshow"/>
        <item
            android:id="@+id/orders_completed"
            android:title="@string/orders_comleted"
            android:icon="@drawable/ic_completed"/>
        <item
            android:id="@+id/list_rooms"
            android:title="@string/list_rooms"
            android:icon="@drawable/ic_room_list"/>
    </menu>
</item>
    <item android:title="@string/other">
        <menu >
            <item android:title="@string/logout"
                android:id="@+id/menu_logout"
                android:icon="@drawable/ic_logout"/>
            <item android:title="@string/exit"
                android:id="@+id/menu_exit"
                android:icon="@drawable/ic_exit"/>
        </menu>
    </item>
</menu>