<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_gravity="center">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tvChangePass"
            android:textSize="50dp"/>
        <TextView
            android:id="@+id/tvForget123"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tvForget123"
            android:layout_marginVertical="10dp"
            android:textSize="30dp"/>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="150dp"
            android:layout_marginVertical="20dp"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/tvBack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#FFFFFF"
                android:text="@string/tvBack"
                android:textColor="@color/black"
                android:textSize="27sp" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"/>

            <Button
                android:id="@+id/btnSave"
                android:layout_width="114dp"
                android:layout_height="66dp"
                android:background="@drawable/custom_button_login"
                android:text="@string/btnSave"
                android:textSize="20dp" />
        </LinearLayout>

    </LinearLayout>

</FrameLayout>