<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:id="@+id/framelayout_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:id="@+id/layout_this"
        android:layout_gravity="center">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tvForgetPass"
            android:layout_marginVertical="10dp"
            android:textSize="50dp"/>

        <EditText
            android:id="@+id/edt_phone_forget"
            android:layout_width="540dp"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp"
            android:drawableLeft="@drawable/ic_phone"
            android:drawablePadding="10dp"
            android:ems="10"
            android:inputType="number"
            android:textSize="30dp"
            android:hint="@string/phone_number" />
        <TextView
            android:id="@+id/phone_number_error"
            android:layout_width="540dp"
            android:layout_height="wrap_content"
            android:textColor="@color/red"
            android:textSize="25dp"/>
        <LinearLayout
            android:id="@+id/layout_otp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="20dp"
            android:paddingHorizontal="100dp"
            android:orientation="horizontal">
            <EditText
                android:id="@+id/edt_otp"
                android:layout_width="200dp"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="10dp"
                android:textColor="@color/black"
                android:inputType="number"
                android:gravity="center"
                android:textSize="40dp"
                android:background="@drawable/custom_border"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"/>
            <Button
                android:id="@+id/btn_send_otp"
                android:layout_width="200dp"
                android:layout_height="70dp"
                android:background="@drawable/custom_button3"
                android:text="@string/send_otp"
                android:textSize="30dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="150dp"
            android:layout_marginVertical="20dp"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/tvBack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#FFFFFF"
                android:text="@string/tvBack"
                android:textColor="@color/black"
                android:textSize="35dp" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"/>

            <Button
                android:id="@+id/btnSave"
                android:layout_width="200dp"
                android:layout_height="70dp"
                android:background="@drawable/custom_button"
                android:text="@string/confirm"
                android:textSize="35dp" />
        </LinearLayout>

    </LinearLayout>

</FrameLayout>