<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/btnPhongTrong"
        android:layout_width="407dp"
        android:layout_height="wrap_content"
        android:background="@drawable/custom_button2"
        android:fontFamily="@font/poppins"
        android:text="@string/btnPhongTrong"
        android:textColor="#1E45DF"
        android:textAlignment="center"
        android:textAllCaps="true"
        app:layout_constraintBottom_toTopOf="@+id/btnDatTruoc"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <Button
        android:id="@+id/btnDatTruoc"
        android:layout_width="407dp"
        android:layout_height="wrap_content"
        android:text="@string/btnDatTruoc"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:background="@drawable/custom_button3"
        app:layout_constraintBottom_toTopOf="@+id/btnDangThue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnPhongTrong"/>

    <Button
        android:id="@+id/btnDangThue"
        android:layout_width="407dp"
        android:layout_height="wrap_content"
        android:background="@drawable/custom_button"
        android:text="@string/btnDangThue"
        android:textAlignment="center"
        android:textAllCaps="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnDatTruoc" />

</androidx.constraintlayout.widget.ConstraintLayout>