<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingHorizontal="50dp"
    android:layout_marginVertical="20dp"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tv_title_dialog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tvAdvanceDeposit"
        android:textColor="@color/black"
        android:textSize="50dp"
        android:textStyle="bold" />
    <TextView
        android:id="@+id/tv_message_dialog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Please enter the deposit amount!"
        android:textSize="35dp"
        android:layout_marginTop="20dp"
        android:textColor="@color/black"
        android:textStyle="normal"/>

    <EditText
        android:id="@+id/edt_advan_deposit"
        android:layout_width="650dp"
        android:layout_height="70dp"
        android:textColor="@color/black"
        android:textSize="35dp"
        android:paddingHorizontal="20dp"
        android:inputType="number"
        android:hint="Advance Deposit"
        android:background="@drawable/custom_border"
        android:layout_marginTop="40dp"/>
    <TextView
        android:id="@+id/tv_error_deposit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="35dp"
        android:textColor="@color/red"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="520dp"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/tv_yes_dialog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/yes"
            android:textSize="35dp"
            android:textColor="@color/black"
            android:textStyle="bold"/>
        <TextView
            android:id="@+id/tv_no_dialog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no"
            android:textSize="35dp"
            android:layout_marginLeft="50dp"
            android:textColor="@color/black"
            android:textStyle="bold"/>
    </LinearLayout>


</LinearLayout>